[package]
name = "ledger-cosmos-secp256k1"
description = "An interface to allow easily interacting with the Ledger Cosmos app"
version = "0.5.0"
license = "Apache-2.0"
authors = ["Eric Woolsey <ewoolsey@ualberta.ca>"]
homepage = "https://github.com/ewoolsey/ledger-cosmos-secp256k1"
repository = "https://github.com/ewoolsey/ledger-cosmos-secp256k1"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "cosmos", "apdu", "bluetooth"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
libc = "0.2"
byteorder = "1.4"
thiserror = "1.0"
log = { version = "0.4", features = ["std"] }
ledger-transport = "0.10"
ledger-zondax-generic = "0.10"
k256 = "0.11.6"
cosmrs = { git = "https://github.com/ewoolsey/cosmos-rust/", version = "0.11", features = ["cosmwasm"] }

[dev-dependencies]
ledger-bluetooth = "0.2.0"
ledger-transport-hid = "0.10.0"
ledger-zondax-generic = "0.10"
serial_test = "0.9.0"
env_logger = "0.10"
futures = "0.3"
btleplug = "0.10"
tokio = { version = "1", features = ["macros"] }
